fix : -update the method listContainsO       -rename the variables